crates/cli/tests/snapshots/snapshot_tests__markdown_health_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Fallow: 1 high complexity function

| File | Function | Severity | Cyclomatic | Cognitive | Lines |
|:-----|:---------|:---------|:-----------|:----------|:------|
| `src/complex.ts:42` | `processData` | high | 25 **!** | 30 **!** | 120 |

**50** files, **200** functions analyzed (thresholds: cyclomatic > 20, cognitive > 15)
