crates/cli/tests/snapshots/snapshot_tests__markdown_health_with_production_coverage.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Fallow: 1 high complexity function

| File | Function | Severity | Cyclomatic | Cognitive | Lines |
|:-----|:---------|:---------|:-----------|:----------|:------|
| `src/complex.ts:42` | `processData` | high | 25 **!** | 30 **!** | 120 |

**50** files, **200** functions analyzed (thresholds: cyclomatic > 20, cognitive > 15)

## Production Coverage

- Verdict: cold-code-detected
- Tracked functions: 6
- Called: 3
- Never called: 2
- Coverage unavailable: 1
- Percent dead in production: 33.3%

- Watermark: license-expired-grace

| Path | Function | State | Invocations | Confidence |
|:-----|:---------|:------|------------:|:-----------|
| `src/cold.ts`:14 | `coldPath` | never-called | 0 | high |
| `src/unknown.ts`:8 | `lateBound` | coverage-unavailable | 0 | low |

| Hot path | Function | Invocations |
|:---------|:---------|------------:|
| `src/hot.ts`:3 | `hotPath` | 250 |
